tests/errors/end_program_name.f90
program name
end program name2

